syntax = "proto3";

package mynft;

// @description returns the name of the NFT collection
// @read-only true
message name_arguments {
  
}
message name_result {
  string value = 1;
}

// @description returns the symbol of the NFT
// @read-only true
message symbol_arguments {
  
}
message symbol_result {
  string value = 1;
}

// @description returns the maximum number of NFTs 
// @read-only true
message max_supply_arguments {

}
message max_supply_result {
  uint64 value = 1;
}
// @description mints the NFT to the specified address
// @read-only false
message mint_arguments {
  bytes to = 1;
}
message mint_result {

}


message token_object {
  bytes owner = 1;
}
message supply_object {
  uint64 value = 1;
}
message balance_object {
  uint64 value = 1;
}
message mint_event {
  bytes to = 1;
  bytes token_id = 2;
}
